--- a/grc338/css-mobile-first/lasagnastyle.css
+++ b/grc338/css-mobile-first/lasagnastyle.css
@@ -30,6 +30,7 @@ h2 {
     font-family: Sutro, serif;  
     font-weight: 300;  
     font-style: normal;
+    font-size: 1.5rem;
     padding: .5rem 1rem 1rem;
 }
 
@@ -75,7 +76,7 @@ li {
     margin: .25rem;
 }
 
-footer{
+footer {
     background-color: rgb(255, 136, 0);
     padding: 1rem 2rem 1rem;
     color:#ffffff;
