--- a/grc339/flexbox-form/flexboxform.css
+++ b/grc339/flexbox-form/flexboxform.css
@@ -10,7 +10,7 @@ body {
 	
 div.container {
         max-width: 40em;
-        margin: auto;
+        margin: 1em;
         padding: 1em;
 }
 
@@ -25,7 +25,7 @@ section.personal-info ul li input[type="text"],
 section ul li input[type="email"],
 section ul li input[type="tel"],
 section ul li select {
-	flex: 4 0 30em;
+	flex: 1 0 0;
 	box-sizing: border-box;
 }
 
