--- a/grc339/css-photo-gallery/photogallery.css
+++ b/grc339/css-photo-gallery/photogallery.css
@@ -29,17 +29,17 @@ div.container {
 
 
 main {
-    position: ______;
-    overflow: ______;
-    padding-bottom: calc(_____ + _____);
+    position: relative;
+    overflow: hidden;
+    padding-bottom: calc(66% + 5em);
 }
 
 figure{
     margin: 0;
     width: calc(100%-2em);
-    position: ______;
-    opacity: ______;
-    transition: ______ ___;
+    position: absolute;
+    opacity: 0;
+    transition: opacity .5s;
 }
 
 figcaption {
@@ -54,16 +54,16 @@ input:nth-of-type(1):checked ~ main figure:nth-of-type(1),
 input:nth-of-type(2):checked ~ main figure:nth-of-type(2),
 input:nth-of-type(3):checked ~ main figure:nth-of-type(3),
 input:nth-of-type(4):checked ~ main figure:nth-of-type(4){
-    opacity: ______;
+    opacity: 1;
 }
 
 nav {
-    display: ______;
-    grid-template-columns: ______;
-    grid-gap: ______;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: .2em;
 }
 
 
 input {
-    display: ______;
+    display: none;
 }
