--- a/grc339/digital-magazine/style.css
+++ b/grc339/digital-magazine/style.css
@@ -16,7 +16,7 @@ ruby, section, summary, time, mark, audio, video {
 }
 
 /* Base layout */
-body {
+div.container, div.home-container {
     max-width: 40rem;
     margin: 0 auto;
 }
@@ -52,15 +52,16 @@ header,
 nav {
     margin: 1rem 0.5rem;
 }
-
+/* 
 section {
     margin: 1rem 0 2rem;
-}
+} */
 
 footer {
     padding: 0.75rem 0.5rem;
     background-color: rgb(92, 119, 150);
     color: rgb(238, 238, 238);
+    box-sizing: border-box;
 }
 
 aside {
@@ -132,5 +133,104 @@ aside h2 {
     h2,
     p {
         margin-left: 0;
+    }
+}
+
+@media only screen and (min-width: 60em) {
+    div.home-container {
+        max-width: 80em;
+        padding: 0 1em;
+        display: grid;
+        grid-template-columns: 3fr 1fr;
+        grid-gap: 1em;
+    }
+
+    div.container {
+        max-width: 60em;
+        padding: 0 1em;
+        display: grid;
+        grid-template-columns: 3fr 1fr;
+        grid-gap: 1em;
+    }
+
+    header, nav {
+        margin-bottom: 0;
+    }
+
+    header, footer {
+        grid-column: 1/3;
+    }
+
+    div.home-container main {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 1em;
+    }
+
+    div.home-container aside {
+        background: none;
+        padding: 0;
+        margin-top: 0;
+    }
+
+    div.container aside {
+        margin-top: 0;
+    }
+
+    section.mainstory {
+        grid-column: 2/4;
+        grid-row: 1/3;
+        display: flex;
+    }
+
+    section.mainstory a {
+        flex: 1 0 12em;
+        display: flex;
+        flex-direction: column;
+    }
+
+    section.mainstory a figure {
+        flex: 1 0 12em;
+        display: flex;
+    }
+    
+    section.mainstory a figure img {
+        object-fit: cover;
+    }
+
+    section.mainstory a h2 {
+        flex: 0 0 1em;
+    }
+
+    section.mainstory a p {
+        flex: 0 0 4em;
+    }
+
+    section.secondary {
+        display: flex;
+    }
+
+    section.secondary a {
+        flex: 1 0 12em;
+        display: flex;
+        flex-direction: column;
+    }
+
+    section.secondary a figure {
+        flex: 1 0 12em;
+        display: flex;
+        background-color: yellow;
+    }
+    
+    section.secondary a figure img {
+        object-fit: cover;
+    }
+
+    section.secondary a h2 {
+        flex: 0 0 1em;
+    }
+
+    section.secondary a p {
+        flex: 0 0 4em;
     }
 }
